# question-bank

./: .env.example  .gitignore  CHANGELOG.md  DOCKER.md  Dockerfile  README.md  config.example.json  docker-compose.yml  ocs-tiku.spec  pyproject.toml  question_bank.db  test_prompt_fix.py
admin/: package-lock.json  package.json  tailwind.config.js
admin/src/: App.tsx
admin/src/contexts/: AuthContext.tsx
admin/src/layouts/: DashboardLayout.tsx
admin/src/pages/: Analysis.tsx  Dashboard.tsx  Keys.tsx  Login.tsx  Logs.tsx  Providers.tsx  Settings.tsx
admin/src/utils/: api.ts
app/: launcher.py  main.py
app/api/: deps.py
app/core/: config.py  db.py  logger.py  redis.py
app/models/: __init__.py  api_key.py  base.py  log.py  question.py  stats.py  user.py
app/providers/: base.py  mock_provider.py  multi_provider.py  siliconflow_provider.py
app/repositories/: __init__.py  api_key_repository.py  base.py  cache_repository.py  log_repository.py  question_repository.py  stats_repository.py  user_repository.py
app/schemas/: common.py  health.py  query.py
app/services/: __init__.py  ai_service.py  cache_service.py  query_service.py
app/templates/: index.html
app/utils/: helpers.py
docs/: API.md  DATABASE.md  DEVELOPMENT.md  DOCKER.md  Docker部署指南.md  GIT_DATABASE_CLEANUP.md  INSTALL.md  OCS配置修复.md  OCS集成指南.md  database_examples.py  修复阿里百炼配置.md  答案格式问题修复.md  配置指南.md
scripts/: dev.sh  migrate_db.py
web/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
(+25 files in other folders)
